Addressing code review comments